# 3dviewerGL

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  makefile  test
extra/shaders/: light_fragmentShader.glsl  normal_fragmentShader.glsl
include/: callbacks.hpp  helper.hpp  helper_functions.hpp  helper_objects.hpp  model.hpp  shader.hpp  variables.hpp
includes/: Shader.h  callbacks.hpp  helper_functions.h  model.h  shader.hpp  variables.hpp
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: glad.c  helper.cpp  helper_functions.cpp  helper_objects.cpp  main.cpp  model.cpp  shader.cpp
src/shaders/: bufferFragmentShader.glsl  bufferVertexShader.glsl  default.vs  normal_vertexShader.glsl  vertexShader.glsl
tests/: a.out  ass.cpp  hello_triangle.cpp
